barra completata in versione desktop, da correggere nei vary mq

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="debug container-main ">
+                <div class="container-main ">
 
                     <h2 class="margin-top-50">Recently Played</h2>
 
@@ -188,6 +188,19 @@
                     <h2 class="margin-top-30">Artisti più popolari</h2>
                     <span>Più ascolti, più accurati saranno i suggerimenti.</span>
 
+                    <div class="cards margin-top-30">
+
+                        <div class="card">
+                            <div class="card-artisti lana"></div>
+                            <h3>Lana del Rey</h3>
+                        </div>
+
+                        <div class="card">
+                            <div class="card-artisti einaudi"></div>
+                            <h3 class="text-center">Ludovico Einaudi</h3>
+                        </div>
+
+                    </div>
                 </div>
 
             </div>
@@ -197,8 +210,54 @@
 
         <!-- area inferiore -->
         <div id="bottom-area" class="">
+            <div id="container-bot">
 
-        </div>
+                <div id="sx-bar">
+                    <img src="./assets/img/sinister.jpeg" alt="">
+                    <div class="margin-right-10px">
+                        <h4>Sinister</h4>
+                        <span>Brano nome</span>
+                    </div>
+                    <div>
+                        <i class="fa-regular fa-heart margin-right-10px"></i>
+                        <i class="fa-regular fa-folder"></i>
+                    </div>
+                </div>
+
+                <div class="center-bar">
+
+                    <div class="parte-sopra">
+                        <i class="fa-solid fa-shuffle"></i>
+                        <i class="fa-solid fa-backward-step"></i>
+                        <i class="fa-regular fa-circle-play" id="fa-circle-playa"></i>
+                        <i class="fa-solid fa-forward-step"></i>
+                        <i class="fa-solid fa-arrow-rotate-left"></i>
+                    </div>
+
+                    <div class="parte-sotto">
+                        <span>
+                            0:25
+                        </span>
+                        <div id="barra-song">
+                            <div class="progressione"></div>
+                        </div>
+                        <span>
+                            4:35
+                        </span>
+                    </div>
+
+                </div>
+
+                <div id="comandi-dx">
+                    <i class="fa-solid fa-list-ul"></i>
+                    <i class="fa-solid fa-desktop"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                    <div id="barra-volume">
+                        <div class="progressione"></div>
+                    </div>
+                </div>
+            </div>
+         </div>
 
     </div>
 
